@@ -32,6 +32,7 @@
         * [BUGFIX]: #3005 Fixed performance issue with lots of big values loaded into the grid. Also fixed editing those values using the inline cell editor.
         * [BUGFIX]: #2938 Fixed query executor to idenfity properly tables in named subselects, to the ROWID is handled correctly.
         * [BUGFIX]: #3168 Fixed data filter field in data view, so it handles the single quote character.
+        * [BUGFIX]: #3016 Erasing table data context menu option now honors multiple table selection.
         * [BUGFIX]: Compilation fixes.
 
 [3.1.0]
